--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link href="navbars.css" rel="stylesheet">
     <!-- <link href="todo.css" rel="stylesheet"> -->
 
-    <script src="../assets/js/color-modes.js"></script>
+    <script src="./assets/js/color-modes.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
-    <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
         .bd-placeholder-img {
@@ -202,7 +202,6 @@
             </li>
         </ul>
     </div>
-
 
 
     <main class="d-flex flex-nowrap">
@@ -425,7 +424,7 @@
     
 
 </body>
-<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+<script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
 
 <script src="sidebars.js"></script>
 
